src/tests/krate/publish/snapshots/integration__krate__publish__features__feature_name_with_dot.snap
---
source: src/tests/krate/publish/features.rs
expression: crates
---
[
  {
    "name": "foo",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "27dd07372333f362aa95ec0d2c1eb1027210edc57c8ab93d065d309a01b08de7",
    "features": {
      "foo.bar": []
    },
    "yanked": false,
    "pubtime": "[datetime]"
  }
]
