src/tests/krate/publish/snapshots/integration__krate__publish__features__feature_name_with_unicode_chars.snap
---
source: src/tests/krate/publish/features.rs
expression: crates
---
[
  {
    "name": "foo",
    "vers": "1.0.0",
    "deps": [],
    "cksum": "12368623e4c78ae9412ec9a046ed915745bc7901a935ac2a01086ce33064180d",
    "features": {
      "foo.你好世界": []
    },
    "yanked": false,
    "pubtime": "[datetime]"
  }
]
